<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/iv_movie_backdrop"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_backdrop_poster_height"
                android:contentDescription="@string/content_description_backdrop_poster" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top">

                <TextView
                    android:id="@+id/toolbar_detail_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:id="@+id/iv_detail_poster"
                    android:layout_width="@dimen/size_image_poster_detail_width"
                    android:layout_height="@dimen/size_image_poster_detail_height"
                    android:contentDescription="@string/content_description_movie_poster"
                    android:paddingStart="@dimen/padding_medium"
                    android:paddingEnd="@dimen/padding_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_detail_original_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:paddingTop="@dimen/padding_medium"
                    android:paddingBottom="@dimen/padding_medium"
                    android:textSize="@dimen/size_text_header"
                    android:textAlignment="viewStart"
                    android:gravity="center_vertical|start"
                    app:layout_constraintLeft_toRightOf="@id/iv_detail_poster"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <ImageView
                    android:id="@+id/iv_release_date"
                    android:layout_width="@dimen/size_icon_detail"
                    android:layout_height="@dimen/size_icon_detail"
                    android:contentDescription="@string/content_description_release_date"
                    android:src="@drawable/ic_release_date_black_24dp"
                    android:tint="#ffb1120e"
                    app:layout_constraintLeft_toLeftOf="@id/tv_detail_original_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_original_title" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textSize="@dimen/size_text_label"
                    app:layout_constraintBottom_toBottomOf="@id/iv_release_date"
                    app:layout_constraintLeft_toRightOf="@id/iv_release_date"
                    app:layout_constraintTop_toTopOf="@id/iv_release_date"
                    tools:text="2019-04-25" />

                <ImageView
                    android:id="@+id/iv_user_rating"
                    android:layout_width="@dimen/size_icon_detail"
                    android:layout_height="@dimen/size_icon_detail"
                    android:contentDescription="@string/content_description_user_rating"
                    android:src="@drawable/ic_user_rating_black_24dp"
                    android:tint="#ffffd700"
                    app:layout_constraintLeft_toLeftOf="@id/iv_release_date"
                    app:layout_constraintTop_toBottomOf="@id/iv_release_date" />

                <TextView
                    android:id="@+id/tv_user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textSize="@dimen/size_text_label"
                    app:layout_constraintBottom_toBottomOf="@id/iv_user_rating"
                    app:layout_constraintLeft_toRightOf="@id/iv_user_rating"
                    app:layout_constraintTop_toTopOf="@id/iv_user_rating"
                    tools:text="7.8/10" />

                <ImageView
                    android:id="@+id/iv_genres"
                    android:layout_width="@dimen/size_icon_detail"
                    android:layout_height="@dimen/size_icon_detail"
                    android:contentDescription="@string/content_description_genres"
                    android:src="@drawable/ic_genre_black_24dp"
                    android:tint="#ff007700"
                    app:layout_constraintLeft_toLeftOf="@id/iv_user_rating"
                    app:layout_constraintTop_toBottomOf="@id/iv_user_rating"/>

                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textSize="@dimen/size_text_label"
                    app:layout_constraintLeft_toRightOf="@id/iv_genres"
                    app:layout_constraintTop_toTopOf="@id/iv_genres"
                    tools:text="Action\nDrama\n"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:id="@+id/overview_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@id/detail_container"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@android:color/black"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/overview_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_medium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview_divider">

                <TextView
                    android:id="@+id/overview_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_text_header"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:paddingStart="@dimen/padding_medium"
                    android:paddingEnd="@dimen/padding_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/overview_header"/>

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_medium"
                    android:paddingEnd="@dimen/padding_medium"
                    android:layout_marginTop="@dimen/margin_medium_small"
                    android:textSize="@dimen/size_text_body"
                    app:layout_constraintLeft_toLeftOf="@id/overview_header"
                    app:layout_constraintTop_toBottomOf="@id/overview_header"
                    tools:text="A really great description!" />

                <ProgressBar
                    android:id="@+id/pb_load_details"
                    android:layout_width="@dimen/size_progressbar"
                    android:layout_height="@dimen/size_progressbar"
                    android:visibility="invisible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/details_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/iv_details_error"
            android:src="@drawable/ic_connection_error_black_24dp"
            android:layout_width="@dimen/size_image_connection_error"
            android:layout_height="@dimen/size_image_connection_error"
            android:contentDescription="@string/content_description_connection_error"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:tint="@color/color_error"
            android:layout_marginTop="@dimen/margin_extra_large"/>

        <TextView
            android:id="@+id/tv_details_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_no_movie"
            android:gravity="center"
            android:textColor="@color/color_error"
            android:layout_below="@id/iv_details_error"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/size_text_header"
            android:layout_marginTop="@dimen/margin_large"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>